--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "aos": "^2.3.4",
     "bootstrap": "4.1.1",
     "firebase": "^7.9.3",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.3.2",
+    "ngx-drag-drop": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
